--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
         </br >
         </br >
         <div class="max-w-xl mx-auto bg-white dark:bg-neutral-800 p-6 rounded shadow-md transition-colors duration-700">
-            <h3 class="text-xl font-bold mb-4" style="color:"#29cce5" data-translate="feedbackTitle">Mandami un feedback!</h3>
+            <h3 class="text-xl font-bold mb-4" style="color:#29cce5" data-translate="feedbackTitle">Mandami un feedback!</h3>
             <form id="feedback-form" action="https://formspree.io/f/manjgjzw" method="POST">
                 <label for="email" class="block mt-4" data-translate="emailOptional">La tua email (facoltativa):</label>
                 <input type="email" id="email" name="email" placeholder="nome@example.com" class="w-full p-2 mt-1 border border-gray-300 rounded dark:text-white dark:bg-neutral-700 transition-colors duration-700">
